# rust-ad-exchange

./: .gitignore  Cargo.toml  rex.yaml  test-campaigns.yaml
.cargo/: config.toml
docker/datadog/: .env.example  docker-compose.yml
docker/signoz/: .env.example
requests/: br_json_app_imps.http  br_json_site.http  sync_in.http  sync_out.http
scripts/: run-with-sudo.sh
src/: main.rs
src/app/: config.rs  http.rs  mod.rs  span.rs
src/app/core/: config_manager.rs  mod.rs
src/app/core/enrichment/: device.rs  ua_deprecated.rs
src/app/core/models/: bidder.rs
src/app/handlers/: adtag.rs  billing.rs  creative_serving.rs  mod.rs  profile.rs  rtb.rs  sync.rs
src/app/lifecycle/: context.rs  mod.rs
src/app/lifecycle/shutdown/: mod.rs  shutdown.rs
src/app/lifecycle/shutdown/tasks/: flush_counters.rs  mod.rs  observability.rs  stop_server.rs
src/app/lifecycle/startup/: mod.rs  startup.rs
src/app/lifecycle/startup/tasks/: bidder_manager_load.rs  bidders_load.rs  build_adtag_pipeline.rs  cluster.rs  config_load.rs  counter_stores.rs  creative_pipeline.rs  demand_url_cache.rs  device_load.rs  direct_managers_load.rs  event_pipeline.rs  firestore.rs  ip_risk_load.rs  load_adtag_managers.rs  mod.rs  observability.rs  pubs_load.rs  rtb_pipeline.rs  shapers_load.rs  start_server.rs  sync_pipelines.rs  sync_store_init.rs  tracker_init.rs  validate_cdn_domain.rs
src/app/pipeline/: constants.rs  mod.rs
src/app/pipeline/adtag/: context.rs  mod.rs  pipeline.rs  request.rs  response.rs
src/app/pipeline/adtag/tasks/: build_auction.rs  build_response.rs  mod.rs  resolve_placement.rs  run_auction.rs
src/app/pipeline/creatives/: macros.rs  mod.rs
src/app/pipeline/creatives/raw/: context.rs  mod.rs  pipeline.rs
src/app/pipeline/creatives/raw/tasks/: mod.rs  resolve_cdn.rs  resolve_creative.rs
src/app/pipeline/events/: mod.rs
src/app/pipeline/events/billing/: context.rs  mod.rs  pipeline.rs
src/app/pipeline/events/billing/tasks/: bail_if_expired.rs  cache_urls_validation.rs  data_url_task.rs  extract_event.rs  fire_demand_burl.rs  mark_if_expired.rs  mod.rs  record_campaign_counters.rs  record_deal_counters.rs  record_demand_counters.rs  record_event.rs  record_metrics.rs  record_pacing.rs  record_pub_counters.rs  record_shaping.rs
src/app/pipeline/ortb/: context.rs  mod.rs  pipeline.rs  targeting.rs  telemetry.rs
src/app/pipeline/ortb/direct/: bid.rs  creative.rs  deals.rs  matching.rs  mod.rs  settlement.rs
src/app/pipeline/ortb/direct/pacing/: bucket.rs  campaign_pacer.rs  daily_map.rs  deal.rs  even.rs  fast.rs  mod.rs  reservation.rs  traits.rs
src/app/pipeline/ortb/direct/pacing/deal_tracker/: firestore.rs  memory.rs  mod.rs
src/app/pipeline/ortb/direct/pacing/spend_tracker/: memory.rs  (+2 more)
src/app/pipeline/ortb/tasks/: bid_settlement.rs  bidder_callouts.rs  bidder_matching.rs  device_lookup.rs  floors_markup.rs  hops_filter.rs  identity_demand.rs  identity_request.rs  imp_breakout.rs  ip_block.rs  margin_task.rs  mod.rs  notice_injections.rs  notice_injections_adm_macros.rs  notice_urls.rs  notifications.rs  pub_lookup.rs  qps.rs  schain_append.rs  test_bidder.rs  traffic_shaping.rs  validate.rs
src/app/pipeline/ortb/tasks/auction/: auction_id.rs  bid_settlement.rs  bidder_callouts.rs  bidder_matching.rs  device_lookup.rs  identity_request.rs  imp_breakout.rs  ip_block.rs  mod.rs  notice_injections_adm_macros.rs  notice_urls.rs  pub_lookup.rs  qps.rs  record_shaping.rs  test_bidder.rs  traffic_shaping.rs  validate.rs
src/app/pipeline/ortb/tasks/direct/: direct_campaign_matching.rs  merge.rs  mod.rs  resolve_creative_macros.rs
src/app/pipeline/ortb/tasks/enrichment/: auction_id.rs  device_lookup.rs  hops_filter.rs  identity_request.rs  junk_filter.rs  mod.rs  pub_lookup.rs  schain_append.rs  tmax_offset.rs  validate.rs
src/app/pipeline/ortb/tasks/finalizers/: bid_counters.rs  campaign_counters.rs  deal_counters.rs  demand_counters.rs  mod.rs  pub_counters.rs
src/app/pipeline/ortb/tasks/rtb/: bidder_callouts.rs  bidder_matching.rs  deal_attribution.rs  floors_markup.rs  identity_demand.rs  imp_breakout.rs  margin_task.rs  mod.rs  notice_injections_adm_macros.rs  notice_urls.rs  qps.rs  test_bidder.rs  traffic_shaping.rs
src/app/pipeline/ortb/tasks/settlement/: bid_settlement.rs  mod.rs
src/app/pipeline/ortb/tasks/utils/: mod.rs  schain.rs
src/app/pipeline/syncing/: mod.rs  utils.rs
src/app/pipeline/syncing/in/: context.rs  mod.rs  pipeline.rs
src/app/pipeline/syncing/in/tasks/: extract_demand.rs  extract_event.rs  mod.rs  parse_dataurl.rs  store_buyeruid.rs
src/core/: config_manager.rs  mod.rs
src/core/cluster/: discovery.rs  mod.rs
src/core/cluster/impls/: fixed.rs  kube.rs  mod.rs
src/core/demand/: client.rs  encoding.rs  mod.rs  notifications.rs  takerate.rs
src/core/enrichment/: device.rs  mod.rs  ua_deprecated.rs
src/core/events/: billing.rs  dataurl.rs  macros.rs  mod.rs
src/core/events/injectors/: adm.rs  mod.rs
src/core/filters/: bot.rs
src/core/firestore/: client.rs  mod.rs
src/core/firestore/counters/: campaign.rs  deal.rs  demand.rs  mod.rs  publisher.rs  store.rs  traits.rs
src/core/managers/: advertisers.rs  bidders.rs  buyers.rs  campaigns.rs  creatives.rs  deals.rs  delivery.rs  demand.rs  mod.rs  placements.rs  properties.rs  publishers.rs  shapers.rs
src/core/models/: advertiser.rs  bidder.rs  buyer.rs  campaign.rs  common.rs  creative.rs  deal.rs  mod.rs  placement.rs  property.rs  publisher.rs  shaping.rs  sync.rs  targeting.rs
src/core/observability/: macros.rs  mod.rs  provider.rs
src/core/providers/: config_advertisers.rs  config_buyers.rs  config_campaigns.rs  config_creatives.rs  config_deals.rs  config_demand.rs  config_placements.rs  config_properties.rs  config_publisher.rs  firestore.rs  mod.rs  provider.rs
src/core/shaping/: mod.rs  threshold.rs  utils.rs
src/core/shaping/tree/: handler.rs  logictree.rs  mod.rs  serializers.rs  utils.rs
src/core/spec/: dimensions.rs  mod.rs  nobidreasons.rs
src/core/usersync/: constants.rs  local_store.rs  mod.rs  model.rs  store.rs  utils.rs
(+2 files in other folders)
