[package]
name = "rex"
version = "0.1.0"
edition = "2024"

[features]
default = ["otel-http"]
otel-http = ["opentelemetry-otlp/http-proto"]

[dependencies]
rtb-runtime = { path = "../openrtb-rs", features = ["actix-web", "tracing"] }
pipeline = {  path = "../pipeline" }
actix-web = "4.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"
async-trait = "0.1.89"
derive_builder = "0.20.2"
config = { version = "0.15.18", default-features = false, features = ["async", "convert-case", "yaml"] }
parking_lot = "0.12.5"
rust-device-detector = { git = "https://github.com/simplecastapps/rust-device-detector.git", branch = "main", features = ["cache"] }
fast_uaparser = "2.0.1"
moka = { version = "0.12.11", features = ["sync"] }
ip_network_table = "0.2.0"
reqwest = "0.12.24"
arc-swap = "1.7.1"
ip_network = "0.4.1"
tracing = { version = "0.1.41", features = ["async-await", "log", "release_max_level_info"] }
opentelemetry = { version = "0.31.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "logs", "rt-tokio"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics", "logs", "tls"] }
opentelemetry-appender-tracing = "0.31.0"
rand = "0.9.2"
once_cell = "1.21.3"
http = "0.2.12"
tonic = { version = "0.14.2", default-features = false, features = ["transport"] }
