[package]
name = "rex"
version = "0.1.0"
edition = "2024"

[features]
default = ["otel-http"]
otel-http = ["opentelemetry-otlp/http-proto"]

[dependencies]
rtb-runtime = { path = "../rtb-runtime", features = ["actix-web", "tracing", "simd-json"] }
logictree = { path = "../logictree" }
pipeline = {  path = "../pipeline" }
kube-discovery = { path = "../kube-discovery" }
actix-web = { version = "4.11.0", default-features = false, features = ["macros", "compress-gzip", "compress-zstd", "cookies"] }
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"
async-trait = "0.1.89"
derive_builder = "0.20.2"
config = { version = "0.15.18", default-features = false, features = ["async", "convert-case", "yaml"] }
parking_lot = "0.12.5"
rust-device-detector = { git = "https://github.com/simplecastapps/rust-device-detector.git", branch = "main", features = ["cache"] }
fast_uaparser = "2.0.1"
moka = { version = "0.12.11", features = ["sync"] }
ip_network_table = "0.2.0"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "http2", "gzip", "deflate", "hickory-dns"] }
arc-swap = "1.7.1"
ip_network = "0.4.1"
tracing = { version = "0.1.41", features = ["async-await", "log"] }
opentelemetry = { version = "0.31.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "logs", "rt-tokio"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics", "logs", "tls"] }
opentelemetry-appender-tracing = "0.31.0"
url = "2.5"
tonic = { version = "0.14.2", default-features = false, features = ["transport"] }
prost = "0.14.1"
bytes = "1.10.1"
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
libdeflater = "1.23"
futures-util = "0.3.31"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["parking_lot", "sync"] }
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
governor = "0.10.1"
ordered-float = "5.1.0"
smallvec = "1.15.1"
mimalloc = "0.1.48"
derivative = "2.2.0"
humantime-serde = "1.1.1"
firestore = "0.47.1"
dashmap = "6.1.0"
chrono = "0.4.43"
fastrand = "2.3.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[profile.release]
opt-level = 3
debug = 0
strip = true
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
